Bug 148186 - "send by email" function does not attach images in Thunderbird
Summary: "send by email" function does not attach images in Thunderbird
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-SendByMail (other bugs)
Version First Reported In: 5.6.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-07-25 09:15 UTC by David Fraser
Modified: 2017-07-10 10:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Fraser 2007-07-25 09:15:03 UTC
Version:           0.1.4 (using KDE KDE 3.5.6)
Installed from:    Ubuntu Packages
OS:                Linux

If I use the "Email Images..." dialog in digikam, and send the images through Thunderbird, the images are resized etc, but the Compose Window that opens in Thunderbird is blank (no subject, text, or attachments).
This has been reported before as bug 132220, bug 139646, and bug 144247, but these all referred to Thunderbird 1.5.x
I suspect that some version of this bug has always been present as in particular bug 144247 was simply marked as "Works for me" though the two reporters both claimed to be using Thunderbird 1.5.0.10, not 1.5.0.1 which was known to have a commandline-parsing bug.
I can provide any details necessary - would really prefer that this is debugged properly than closed as another DUPLICATE
Comment 1 caulier.gilles 2007-11-12 15:26:31 UTC
SVN commit 735733 by cgilles:

Kipi-plugins from trunk (KDE4) : SendImages plugin port:

Huge improvement with mozilla/thunderbird emailer support about attachement files given on command line. 
No need to check if an instance of mailer already exist in memory to use -remote option. If we use -compose 
with the right options form. This way simplify the source code considerably... Thanks to Mozilla.org wiki page 
to describe all catch command line options syntax.

I have tested with recent Thunderbird, Mozilla, and Netscape mailers. Please give me feedback if you occurs special 
errors with old versions. Thanks in advance...

Note B.K.O files 148186 is closed because RAW attachement files is fixed now.

CCMAIL: digikam-devel@kde.org
CCMAIL: kde-imaging@kde.org

BUG: 148186
BUG: 150453


 M  +8 -55     emailpage.cpp  
 M  +0 -6      emailpage.h  
 M  +0 -2      emailsettingscontainer.h  
 M  +39 -80    sendimages.cpp  
 M  +0 -2      sendimagesdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=735733
Comment 2 caulier.gilles 2017-07-10 10:18:44 UTC
This problem is not reproducible with new Send By Mail tool from digiKam core
version 5.7.0.

Gilles Caulier