Kipi-plugins from trunk (KDE4) : SendImages plugin port:

Huge improvement with mozilla/thunderbird emailer support about attachement files given on command line. 
No need to check if an instance of mailer already exist in memory to use -remote option. If we use -compose 
with the right options form. This way simplify the source code considerably... Thanks to Mozilla.org wiki page 
to describe all catch command line options syntax.

I have tested with recent Thunderbird, Mozilla, and Netscape mailers. Please give me feedback if you occurs special 
errors with old versions. Thanks in advance...

Note B.K.O files 148186 is closed because RAW attachement files is fixed now.

CCMAIL: digikam-devel@kde.org
CCMAIL: kde-imaging@kde.org

BUG: 148186
BUG: 150453

svn path=/trunk/extragear/libs/kipi-plugins/; revision=735733